<resources>
    <string name="app_name">EMS</string>
    <string name="hintOne">Your number, WhatsApp preferably </string>
    <string name="hintTwo">Your Designation</string>

    <string name="save">Save</string>
    <string name="designation">Designation</string>
    <string name="name">Name</string>
    
    
    <string name="home_option_one">Employees List</string>
    <string name="home_option_two">Apply  Day-Off</string>
    <string name="home_option_three">Logout</string>
    <string name="home_option_four">Edit Profile</string>
    <string name="home_option_five">Day-Off History</string>
    <string name="home_option_six">Approve Day-Off</string>


    <array name="departments">
        <item name="hr">HR</item>
        <item name="productDevelopment">Development</item>
        <item name="it">IT services</item>
        <item name="marketing">Sales</item>
        <item name="finance">Finance</item>
        <item name="quality">QA</item>
    </array>


    <string name="employee_list_option_one">Call</string>
    <string name="employee_list_option_two">Email</string>
    <string name="employee_list_option_three">WhatsApp</string>

    <string name="select_date_range">Select first and last date</string>
    <string name="startDate">Start Date :</string>
    <string name="endDate">End Date :</string>
    <string name="stringDayOff">Day-Off Balance: </string>
    <string name="noOfDays">Day-off Count: </string>
    <string name="dayOffReason">Please, state a suitable reason for the day-off.</string>

    <string name="appliedOn">Applied On :</string>
    <string name="phone">Phone Number</string>
    <string name="approve">Approved by RG
    </string>

    <string name="to">to</string>
    <string name="leaveHistory">Day-Off History</string>
    <string name="pendingRequest">Pending Leave Request</string>

    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="pendingDayOff">New Pending Day-off request</string>
    <string name="appliedBy">Applied By:</string>
    <string name="reason">Reason of Leave</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>



</resources>
