<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ru.slybeaver.slycalendarview.SlyCalendarView
        android:id="@+id/slyCalendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundColor="#F7F2F2"
        app:headerColor="#00E5FF"
        app:firstMonday="true"
        app:selectedColor="#0000ff"
        />
    <com.google.android.material.button.MaterialButton
        app:icon="@drawable/selectdate"
        android:text="@string/select_date_range"
        android:layout_gravity="center"
        android:id="@+id/selectDate"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:background="@color/lightGrey"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:gravity="center"
                android:layout_marginStart="28sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/startDate"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/textGrey"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:layout_marginStart="28sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/startDate"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/textBlack"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:background="@color/textBlack"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:text="@string/endDate"
                android:textSize="12sp"
                android:layout_marginStart="@dimen/text_20sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/textGrey"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/endDate"
                android:textSize="18sp"
                android:layout_marginStart="@dimen/text_20sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/textBlack"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <LinearLayout
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
          <TextView
              android:gravity="center"
              android:layout_marginStart="28sp"
              android:layout_gravity="center_vertical"
              android:text="@string/stringDayOff"
              android:textSize="18sp"
              android:fontFamily="sans-serif"
              android:textColor="@color/textGrey"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
          <TextView
              android:gravity="center"
              android:layout_gravity="center_horizontal"
              android:id="@+id/dayOffLeft"
              android:textSize="25sp"
              android:fontFamily="sans-serif"
              android:textStyle="bold"
              android:textColor="@color/textBlack"
              android:layout_marginTop="5dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />


      </LinearLayout>

      <LinearLayout
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
          <TextView
              android:gravity="center"
              android:layout_marginStart="28sp"
              android:layout_gravity="center_vertical"
              android:text="@string/noOfDays"
              android:id="@+id/dayCountString"
              android:textSize="18sp"
              android:fontFamily="sans-serif"
              android:textColor="@color/textGrey"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
          <TextView
              android:gravity="center"
              android:layout_gravity="center_horizontal"
              android:id="@+id/dayOffCount"
              android:textSize="25sp"
              android:fontFamily="sans-serif"
              android:textStyle="bold"
              android:textColor="@color/textBlack"
              android:layout_marginTop="5dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />


      </LinearLayout>



      <com.google.android.material.textfield.TextInputEditText
          android:hint="@string/dayOffReason"
          android:background="@drawable/edittext_background"
         android:layout_width="match_parent"
          android:layout_margin="25dp"
          android:drawablePadding="5dp"
          android:id="@+id/status"
          android:padding="5dp"
          android:drawableStart="@drawable/edit"
         android:layout_height="100dp" />




  </LinearLayout>
    <LinearLayout
        android:id="@+id/applyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <github.ishaan.buttonprogressbar.ButtonProgressBar
            android:id="@+id/bpb_main"
            android:layout_gravity="bottom"
            app:text="Apply Leave"
            app:textSize="18sp"
            style="@style/TextLabel"
            app:textColor="@color/textBlack"
            app:type="indeterminate"
            app:bgColor="@color/greenOk"
            app:progColor="@color/lightGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</LinearLayout>