<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="165dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            app:civ_shadow_gravity="center"
            android:id="@+id/bottomPhoto"
            app:civ_border_color="@color/textGrey"
            app:civ_border_width="2dp"
            app:civ_shadow="true"
            android:layout_centerHorizontal="true"
            app:civ_shadow_radius="10"
            android:src="@drawable/placeholder"
            android:layout_marginTop="10dp"
            app:civ_shadow_color="@color/colorAccent"
            android:layout_width="175dp"
            android:layout_height="155dp" />

        <ImageView
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <TextView
        android:layout_marginTop="12sp"
        android:text="@string/name"
        android:gravity="center_horizontal"
        android:textColor="@color/textGrey"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/text_20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/bottomName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="@dimen/text_20sp"
        android:background="@drawable/edittext_background"
        android:layout_marginStart="@dimen/text_20sp"
        android:textColor="@color/textBlack"
        android:inputType="textCapWords"
        android:layout_height="60dp"/>
    <TextView
        android:text="@string/designation"
        android:layout_marginStart="20sp"
        android:gravity="start"
        android:textColor="@color/textGrey"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:id="@+id/bottomDesignation"
        android:layout_marginEnd="@dimen/text_20sp"
        android:layout_marginStart="@dimen/text_20sp"
        android:textColor="@color/textBlack"
        android:inputType="textCapWords"
        android:background="@drawable/edittext_background"
        android:layout_height="60dp"/>

    <TextView
        android:text="@string/phone"
        android:gravity="center_horizontal"
        android:textColor="@color/textGrey"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:layout_marginStart="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/phone_number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="@dimen/text_20sp"
        android:background="@drawable/edittext_background"
        android:layout_marginStart="@dimen/text_20sp"
        android:textColor="@color/textBlack"
        android:maxLength="10"
        android:inputType="phone"
        android:layout_height="60dp"/>

</LinearLayout>