<?xml version="1.0" encoding="utf-8"?>
<io.armcha.elasticview.ElasticView android:id="@+id/imageElasticView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FAF4DE"
    app:cardCornerRadius="10dp"
    app:cardElevation="50dp"
    app:flexibility="3"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<com.google.android.material.card.MaterialCardView
    app:cardBackgroundColor="@color/mediumGrey"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/approvedBy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/text_20sp"
            android:layout_weight="2"
            android:gravity="start"
            android:textColor="@color/textBlack"
            android:textSize="18sp" />

        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/status"
            android:padding="2dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_background"
            android:gravity="center"
            android:textColor="@color/colorBackground"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/text_20sp"
            android:layout_weight="2"
            android:gravity="start"
            android:textColor="@color/textBlack"
            android:textSize="18sp" />




        </LinearLayout>
    <View
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:text="@string/startDate"
            android:layout_marginStart="@dimen/text_20sp"
            android:gravity="start"
            android:textColor="@color/textGrey"
            android:textSize="18sp"
            android:layout_width="115dp"
            android:layout_height="wrap_content" />

            <TextView

                android:id="@+id/startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="@color/textBlack"
                android:textSize="15sp" />



    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:text="@string/endDate"
            android:layout_marginStart="@dimen/text_20sp"
            android:gravity="start"
            android:textColor="@color/textGrey"
            android:textSize="18sp"
            android:layout_width="115dp"
            android:layout_height="wrap_content" />

        <TextView

            android:id="@+id/endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/textBlack"
            android:textSize="15sp" />



    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:text="@string/noOfDays"
            android:layout_marginStart="@dimen/text_20sp"
            android:gravity="start"
            android:textColor="@color/textGrey"
            android:textSize="18sp"
            android:layout_width="145dp"
            android:layout_height="wrap_content" />

        <TextView

            android:id="@+id/noOfDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/textBlack"
            android:textSize="15sp" />



    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:text="@string/appliedOn"
            android:layout_marginStart="@dimen/text_20sp"
            android:gravity="start"
            android:textColor="@color/textGrey"
            android:textSize="18sp"
            android:layout_width="115dp"
            android:layout_height="wrap_content" />

        <TextView

            android:id="@+id/timeStamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/textBlack"
            android:textSize="15sp" />



    </LinearLayout>


</LinearLayout>


</com.google.android.material.card.MaterialCardView>
</io.armcha.elasticview.ElasticView>